@@ -47,10 +47,11 @@ before wing_finalize_class => sub {
     my ($class) = @_;
     $class->wing_field(
         uri_part => {
-            dbic        => { data_type => 'varchar', size => 60, is_nullable => 0 },
-            view        => 'public',
-            edit        => 'postable',
-            indexed     => 'unique',
+            dbic            => { data_type => 'varchar', size => 60, is_nullable => 0 },
+            view            => 'public',
+            edit            => 'postable',
+            indexed         => 'unique',
+            skip_duplicate  => 1,
         }
     );
 };
